--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "file-loader": "^6.1.0",
     "mini-css-extract-plugin": "^2.0.0",
     "node-sass": "^6.0.1",
+    "optimize-css-assets-webpack-plugin": "^6.0.1",
     "sass-loader": "^12.1.0",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^4.1.0",
