--- a/package.json
+++ b/package.json
@@ -1,16 +1,22 @@
 {
-  "name": "newjantdev",
+  "name": "wordpress-webpack-dev-envirument",
   "version": "1.0.0",
-  "description": "",
+  "description": "Speed up the developing envirument of working with wordpress development.",
+  "author": "Jan T. Jensen",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/jantdev/wordpress-webpack-dev-envirument/issues"
+  },
+  "homepage": "https://github.com/jantdev/wordpress-webpack-dev-envirument#readme",
+    "keywords": ["webpack","wordpress","nodejs"],
+
   "scripts": {
     "prod": "webpack --mode production",
     "dev": "webpack --mode development --watch"
   },
-  "keywords": [],
+
   "mode": "development",
   "devtool": "source-map",
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
     "@babel/cli": "^7.12.8",
     "@babel/core": "^7.12.9",
